@@ -97,3 +97,4 @@ Close all tabs BEFORE restoring session.
 Dimmed Nav, func and bookmark menus when no docs open.
 Dimmed saveall, close etc when no docs open.
 Session can now be restored with/without the saved bookmarks.
+Auto restore bookmarks can be set in prefs
